Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -30,28 +30,25 @@
       <section>
         <h1>CNUThesis</h1>
 
-<p>LaTeX Thesis Template for Capital Normal University</p>
-
-<p>首都师范大学学位论文 LaTeX 模板</p>
+<p>LaTeX Thesis Template for Capital Normal University
+首都师范大学学位论文 LaTeX 模板</p>
 
 <hr><h2>简介</h2>
 
-<p>CNUThesis 宏包是根据首都师范大学本科生毕业设计(论文)格式要求以及首都师范大学硕士(博士)学位论文格式要求编写的。宏包旨在为首都师范大学的学生提供一个简单、专业、有效的排版工具以简化学位论文的撰写，使得论文作者可以将精力集中到论文的内容上而不是浪费在版面设置上。同时宏包在符合学位论文撰写要求的基础上尽可能地进行美化，其中还参考了出版界的一些排版规范。</p>
+<p>CNUthesis 宏包是根据首都师范大学教务处发布的本科生毕业设计 (论文) <a href="http://zf.cnu.edu.cn/xytz/5896.htm">格式要求</a>和<a href="http://202.204.208.76/jwc/detail.jsp?seq=2799&amp;boardid=23108">示例模版</a>以及研究生院发布的首都师范大学硕士 (博士) 学位论文<a href="http://grad.cnu.edu.cn/pages/info.php?id=77">格式要求</a>及<a href="http://202.204.214.169/xwlw/">示例模版</a>制作的。
+其中，本科生格式要求为教务处2012年12月5日发布的版本。</p>
 
-<p>CNUThesis 使用 XeLaTeX，方便字体设置。中文支持使用xeCJK包。</p>
+<p>为了便于开发和维护，研究生、博士生的 LaTeX 模板与本科生的学位论文模板分别独立开发。硕士/博士学位论文格式宏包使用名称 CNUthesis（发布较早），本科论文格式模版使用名称 CNUthesisX。</p>
 
-<p>为了便于开发和维护，研究生、博士生的LaTeX 模板与本科生的学位论文模板分别独立开发。现在已经支持硕士/博士学位论文格式，本科论文格式即将支持，敬请期待。</p>
-
-<p>模板生成的论文效果以及模板使用手册请见相应目录下的PDF格式文档。</p>
-
-<p>本项目正在开发中，欢迎首都师范大学的同学加入进来。同时，如果你有什么好的建议，欢迎联系我(Email:<a href="mailto:imengyingchina@gmail.com">imengyingchina@gmail.com</a>)。</p>
+<p>CNUthesis 使用 XeLaTeX，方便字体设置。中文支持使用 xeCJK 包。模板生成的论
+文效果以及模版使用手册请下载模版后见相应目录下的 PDF 格式文档。</p>
 
 <h2>致谢</h2>
 
-<p>该模板是在华南师范大学的<a href="https://code.google.com/p/scnuthesis/">SCNUThesis</a>的基础上完成的，修改了封面、页脚等使之符合学校的论文要求。</p>
+<p>本科生论文模版是在中国科学技术大学本科生论文模板 USTC_Thesis_Bachelor_20120511 的
+基础上完成的；硕博论文模板是在华南师范大学的<a href="https://code.google.com/p/scnuthesis/">SCNUThesis</a>的基础上完成的。</p>
 
-<p>在制作模板的过程中也参考了国防科技大学的 NUDTpaper、清华的 Thuthesis、中科院计算所 ICTthesis、
-中国科学技术大学 USTCthesis 等硕博论文模板,一并表示感谢。</p>
+<p>在制作模板的过程中也参考了国防科技大学的NUDTpaper、清华的Thuthesis、中科院计算所ICTthesis、中国科学技术大学USTCthesis 等硕博论文模板，一并表示感谢。</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/mengyingchina">mengyingchina</a></p>
